[STOE1-190] - mobile fix for product alignment on home and category page

--- a/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_related_products_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_related_products_extend.less
@@ -48,11 +48,13 @@
 //
 //  Mobile
 //  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__s) {
+
     .block.related {
         .products-grid {
             .product-item {
-                margin-bottom: 22px;
+                .lib-css(margin-bottom, @indent__base);
             }
         }
     }
@@ -64,6 +66,7 @@
             }
         }
     }
+
 }
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
